
Project hosting: https://launchpad.net/tomdroid/

Please report bugs to: https://bugs.launchpad.net/tomdroid

Mailing list: tomdroid-dev@lists.launchpad.net 
Join it at: https://launchpad.net/~tomdroid-dev

For more details and developer visible changes see the ChangeLog

-------------------------------------------------------------------------------
Versoin 0.?? released on ??
* Switched to the Launchpad Translation Platform (Stefan Hammer)
* New Japanese translation (Koichi Akabe)
* New Polish translation (Piotr Adamski)

-------------------------------------------------------------------------------
Version 0.5.0 - "long delayed because of fatherhood release" released on 2011-09-05

* Search within notes from Tomdroid and system integrated search (Stefan Hammer)
* Add a context menu with the ability to send a note (Edouard Richard)
* Several usability improvements (Stefan Hammer)
* Higher quality icons including brand new Tomdroid icon (Stefan Hammer, 
  lp:593351)
* Added UI feedback for "selected" and "pressed" events (Stefan Hammer, 
  lp:799327)
* List indentation increased + wrapping fix (Matthew Rasmus, lp:660116)
* Parsing fixes regarding bullet lists (Matthew Rasmus, lp:697996)
* Improved error handling and reporting (Benoit Garret, lp:660057, lp:689473)
* Date on the note list is now displayed according to the phone's locale
  (Matthew Rasmus, lp:659743)
* Fixed SD card synchronization crashing on large note collections (Thomas 
  Frenzel, lp:534213)
* Fixed a crasher when sending a short note (Stefan Hammer, lp:800176)
* More content can be translated (Benoit Soyeux)
* New German translation (Stefan Hammer)
* Updated French translation (Benoit Soyeux)

-------------------------------------------------------------------------------
Version 0.4.1 - "I didn't do it!" (fixed with duct tape) released on 2010-10-15

* Fixed sync issues related to note identifiers (Stuart Langridge, lp:657477)