@@ -53,7 +53,7 @@
 	<string name="prefSyncService">خدمة</string>
 	<string name="prefSyncServer">خادم</string>
 	<string name="prefSDCard">SD Card</string>
-	<string name="prefTomboyWeb">Online Synchronization</string>
+	<string name="prefTomboyWeb">التزامن عبر الإنترنت</string>
 	<string name="prefAuthenticate">توثيق</string>
 	
 	<string name="prefSyncCompleteAuth">استكمال التوثيق. يرجى الانتظار...</string>
