@@ -25,7 +25,7 @@
 	
 	<!-- application details -->
 	<string name="app_name">Tomdroid</string>
-	<string name="app_desc">Tomboy compatible wikiwiki note-taking application that can\'t take notes yet.</string>
+	<string name="app_desc">Tomboy-kompatibilis wikiwiki jegyzetfüzet-alkalmazás, amely még nem tud jegyzeteket létrehozni.</string>
 	<string name="author">Olivier Bilodeau</string>
 	
 	<!-- main.xml -->
@@ -37,7 +37,7 @@
 	<string name="menuAbout">Névjegy</string>
 	<string name="titleWelcome">Figyelmeztetés</string>
 	<string name="titleAbout">A Tomdroid névjegye</string>
-	<string name="strWelcome">Welcome to Tomdroid.\n\nPlease note that this is beta quality software and that it contains known problems, like its inability to edit notes.\n\nWe are well aware of these issues and intend to work on them quickly but I also wanted to get something out and tested as quickly as possible.\n\nIf you would like to contribute, help at all levels would be appreciated. Hop on board on launchpad.net/tomdroid and contact us!\n</string>
+	<string name="strWelcome">Üdvözli a Tomdroid.\n\nVegye figyelembe, hogy ez egy béta minőségű szoftver, több ismert hibája is van, például, hogy nem tud jegyzetet szerkeszteni.\n\nMind tisztában vagyunk a hibákkal, és amint lehet, javítjuk őket, de mindenképpen fontos, hogy minél előbb el lehessen kezdeni a tesztelést.\n\nHa szeretne közreműködni, minden jellegű segítség méltányolva lesz. Vegye fel a kapcsolatot velünk a launchpad.net/tomdroid oldalon!\n</string>
 	<string name="strAbout">%1$s\n\nKészítő %2$s\nVerzió: %3$s\nLicenc: GPLv3</string>
 	
 	<!-- TODO aren\'t these available somewhere else? like in the SDK? //-->
@@ -53,19 +53,19 @@
 	<string name="prefSyncService">Szolgáltatás</string>
 	<string name="prefSyncServer">Kiszolgáló</string>
 	<string name="prefSDCard">SD Kártya</string>
-	<string name="prefTomboyWeb">Online Synchronization</string>
+	<string name="prefTomboyWeb">Online szinkronizálás</string>
 	<string name="prefAuthenticate">Hitelesítés</string>
 	
 	<string name="prefSyncCompleteAuth">Hitelesítés folyamatban. Várjon türelemmel...</string>
 	<string name="prefSyncConnectionFailed">Nem sikerült kapcsolódni a szerverhez. Ellenőrizze, hogy helyes címet adott-e meg.</string>
-	<string name="prefServerEmpty">The server address changed but the new value is empty</string>
+	<string name="prefServerEmpty">A szerver címe megváltozott,  de nincs helyette megadva semmi</string>
 	
 	<string name="titleSyncService">Szinkronizálási kiszolgáló választása</string>
 	<string name="messageSyncComplete">Szinkronizálás kész ezzel: %1$</string>
 	<string name="messageSyncNoNote">Nem találhatók jegyzetek itt: %1$.</string>
 	<string name="messageSyncNoConnection">Nincs internetkapcsolat.</string>
 	<string name="messageSyncAlreadyInProgress">A szinkronizálás már folyamatban van</string>
-	<string name="messageSyncError">There was an error trying to parse your note collection. If you are able to replicate the problem, please contact us!</string>
+	<string name="messageSyncError">Hiba történt a jegyzetek betöltése közben. Ha tudja jelenteni a problémát, kérjük, tegye meg!</string>
 	<string name="error">Hiba</string>
 	
 	<!-- NoteSorting -->
@@ -86,7 +86,7 @@
 	<!--  Search -->
 	<string name="search_hint">Jegyzetek keresése</string>
 	<string name="search_description">Szöveg a jegyzeteiben</string>
-	<string name="strNoResults">No notes found for \"%s\"</string>
+	<string name="strNoResults">Nem található jegyzet erre: \"%s\"</string>
 	<string name="menuSearch">Keresés</string>
 	<string name="prefSearch">Keresési beállítások</string>
 	<string name="SearchResultTitle">A keresés eredménye:</string>
@@ -106,7 +106,7 @@
 	<!-- 30 chars max -->
 	<string name="market_title">Tomdroid jegyzetek</string>
 	<!-- 325 chars max -->
-	<string name="market_description">A Tomboy client for Android. Tomboy is a desktop note-taking app using a wikiwiki approach and a simple user interface.\n\nNOTE: It is a READ-ONLY client for now.\n\n* Note format compatibility with Tomboy\n* Online note synchronization with Snowy, Tomboy Online or Ubuntu One\n* SD Card importation\n* Open source!</string>
+	<string name="market_description">Tomboy kliens Androidra. A Tomboy egy wikiwiki elven működő asztali jegyzetfüzet-alkalmazás, egyszerű felhasználói felülettel.\n\nFIGYELEM: jelenleg még csak OLVASÁSRA képes.\n\n* Komaptibilis a Tomboy-al\n* Online szinkronizálás Snowy, Tomboy Online vagy Ubuntu One használatával\n* Importálás SD kártyáról\n* Nyílt forrás!</string>
 	
 	<!-- 80 chars max -->
 	<string name="market_promotext">Jegyzetfüzet-alkalmazás Tomboy-kompatibilis online szinkronizációval</string>
