@@ -25,7 +25,7 @@
 	
 	<!-- application details -->
 	<string name="app_name">Tomdroid</string>
-	<string name="app_desc">Tomboy compatible wikiwiki note-taking application that can\'t take notes yet.</string>
+	<string name="app_desc">Applicazione wikiwiki per prendere note Tomboy compatibile che non può ancora prendere note.</string>
 	<string name="author">Olivier Bilodeau</string>
 	
 	<!-- main.xml -->
@@ -58,14 +58,14 @@
 	
 	<string name="prefSyncCompleteAuth">Sto completando l\'autenticazione. Per favore attendi...</string>
 	<string name="prefSyncConnectionFailed">La connessione al server è fallita, per favore controlla che l\'indirizzo che hai immesso sia corretto.</string>
-	<string name="prefServerEmpty">The server address changed but the new value is empty</string>
+	<string name="prefServerEmpty">L\'indirizzo del server è cambiato ma il nuovo valore è vuoto</string>
 	
 	<string name="titleSyncService">Scegli come sincronizzare le note</string>
 	<string name="messageSyncComplete">Sincronizzazione con %1$s completata.</string>
 	<string name="messageSyncNoNote">Nessuna nota presente in %1$s .</string>
 	<string name="messageSyncNoConnection">Nessuna connessione</string>
 	<string name="messageSyncAlreadyInProgress">Sincronizzazione già in corso</string>
-	<string name="messageSyncError">There was an error trying to parse your note collection. If you are able to replicate the problem, please contact us!</string>
+	<string name="messageSyncError">C\'è stato un errore provando ad analizzare la tua collezione di note. Se sei capace di riprodurre il problema, per favore contattaci!</string>
 	<string name="error">Errore</string>
 	
 	<!-- NoteSorting -->
@@ -75,17 +75,17 @@
 	
 	<!-- NotebookFiltering -->
 	<string name="menuFilterNotebook">Filtra</string>
-	<string name="strListEmptyNoNotebooks">There are no notebooks in the database.</string>
-	<string name="allNotebooksFilter">All notebooks</string>
+	<string name="strListEmptyNoNotebooks">Non ci sono notebook nell\'archivio.</string>
+	<string name="allNotebooksFilter">Tutti i notebook</string>
 	
 	<!-- List Longpress Menu -->
 	<string name="view">Visualizza</string>
-	<string name="noteOptions">Note Options</string>
+	<string name="noteOptions">Opzioni delle note</string>
 	<string name="send">Invia</string>
 	
 	<!--  Search -->
 	<string name="search_hint">Cerca</string>
-	<string name="search_description">Text in your notes</string>
+	<string name="search_description">Testo nelle note</string>
 	<string name="strNoResults">Nessun risultato per \"%s\"</string>
 	<string name="menuSearch">Cerca</string>
 	<string name="prefSearch">Opzioni di Ricerca</string>
@@ -104,12 +104,12 @@
 	I\'ve put it in here so that it\'ll get translated by translators.
 	-->
 	<!-- 30 chars max -->
-	<string name="market_title">Tomdroid notes</string>
+	<string name="market_title">Note Tomdroid</string>
 	<!-- 325 chars max -->
-	<string name="market_description">A Tomboy client for Android. Tomboy is a desktop note-taking app using a wikiwiki approach and a simple user interface.\n\nNOTE: It is a READ-ONLY client for now.\n\n* Note format compatibility with Tomboy\n* Online note synchronization with Snowy, Tomboy Online or Ubuntu One\n* SD Card importation\n* Open source!</string>
+	<string name="market_description">Un client Tomboy per Android. Tomboy è un\'app desktop per prendere note con una semplice interfaccia utente.\n\nNOTA: è un client di SOLA LETTURA per ora.\n\n* Formato delle note compatibile con Tomboy\n* Sincronizzazione online delle note con Snowy, Tomboy Online o Ubuntu One\n* Importazione da schede SD\n* Open source!</string>
 	
 	<!-- 80 chars max -->
-	<string name="market_promotext">Note-taking application with online synchronization compatible with Tomboy</string>
+	<string name="market_promotext">Applicazione per prendere note con sincronizzazione online Tomboy compatibile</string>
 	
 	
 	<!-- Launchpad Translation String -->
