@@ -13,6 +13,7 @@ For more details and developer visible changes see the ChangeLog
 
 -------------------------------------------------------------------------------
 Versoin 0.?? released on ??
+* Tons of new translations by the awesome Translators on Launchpad
 * Switched to the Launchpad Translation Platform (Stefan Hammer)
 * New Japanese translation (Koichi Akabe)
 * New Polish translation (Piotr Adamski)
